--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ enforce_ssl: //eds2024.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/test1_eds2024/"
+baseurl: 
 
 #
 # !! You don't need to change any of the configuration flags below !!
